added note modal and save button functionality, notes can be saved and associated with respecive id's, still working on population

--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -44,3 +44,27 @@
         </div>
     </div>
 </div>
+
+<!-- Modal -->
+<div class="modal fade" id="notes-modal" tabindex="-1" role="dialog" aria-labelledby="modal-label" aria-hidden="true">
+    <div class="modal-dialog" role="document">
+        <div class="modal-content">
+            <div class="modal-header">
+                <h5 class="modal-title" id="modal-label">Article Notes</h5>
+                <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                    <span aria-hidden="true">&times;</span>
+                </button>
+            </div>
+            <div class="modal-body">
+                <div class="md-form">
+                    <i class="fas fa-pencil prefix grey-text"></i>
+                    <textarea type="text" id="new-note" class="md-textarea form-control" rows="4"></textarea>
+                    <label data-error="wrong" data-success="right" for="new-note">New article note</label>
+                </div>
+            </div>
+            <div class="modal-footer">
+                <button type="button" id="save-note" class="btn btn-success" data-dismiss="modal">Save</button>
+            </div>
+        </div>
+    </div>
+</div>
