finished collection join functionality, started on UI updating for notes

--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -56,6 +56,7 @@
                 </button>
             </div>
             <div class="modal-body">
+                <div id="notes-section"></div>
                 <div class="md-form">
                     <i class="fas fa-pencil prefix grey-text"></i>
                     <textarea type="text" id="new-note" class="md-textarea form-control" rows="4"></textarea>
