--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -64,7 +64,7 @@
                 </div>
             </div>
             <div class="modal-footer">
-                <button type="button" id="save-note" class="btn btn-success" data-dismiss="modal">Save</button>
+                <button type="button" id="save-note" class="btn btn-success">Save</button>
             </div>
         </div>
     </div>
